fixed z-index chat icon

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -89,7 +89,7 @@ ul li {
     background-color: #4D3C77;
     color: #fff;
     font-size: 15px;
-    z-index: 99;
+    z-index: 9999;
     transition: all .6s ease-in-out;
 }
 
