--- a/src/components/information/Information.module.css
+++ b/src/components/information/Information.module.css
@@ -13,14 +13,14 @@
     position: fixed;
     margin: 10px;
     background-color: rgb(33, 33, 56);
-    padding: 25px;
+    padding: 30px;
     top: 25%;
-    font-display: flex;
+    display: flex;
     justify-content: center;
+    align-items: center;
     border-radius: 16px;
     font-size: 14px;
     font-weight: 300;
-    line-height: 17px;
     color: #cfd8e9;
     font-family: inherit;
     width: 400px;
@@ -29,12 +29,12 @@
 
 .information .inner .close {
     border: none;
-    border-radius: 12px;
-    padding: 10px 17px;
+    border-radius: 10px;
+    padding: 12px 17px;
     background-color: #824D74;
     font-size: 12px;
     color: #d2dcee;
-    margin-top: 20px;
+    height: fit-content;
     cursor: pointer;
     transition: all .5s ease-in-out;
 }
@@ -50,7 +50,7 @@
 
 .envelope .count {
     position: absolute;
-    background-color: #D27685;
+    background-color: #b44e9c;
     border-radius: 50%;
     width: 20px;
     height: 20px;
@@ -90,7 +90,6 @@
 
 .confirm .inner {
     background-color: #212335;
-    padding: 20px;
     display: flex;
     align-items: center;
     flex-direction: column;
